; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_waitq.c_waitq_wakeup64_thread_locked.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_waitq.c_waitq_wakeup64_thread_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.waitq = type { i32 }

@KERN_SUCCESS = common dso_local global i64 0, align 8
@WAITQ_UNLOCK = common dso_local global i64 0, align 8
@KERN_NOT_WAITING = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @waitq_wakeup64_thread_locked(%struct.waitq* %0, i32 %1, i32 %2, i32 %3, i64 %4) #0 {
  %6 = alloca i64, align 8
  %7 = alloca %struct.waitq*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  store %struct.waitq* %0, %struct.waitq** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i64 %4, i64* %11, align 8
  %14 = load %struct.waitq*, %struct.waitq** %7, align 8
  %15 = call i32 @waitq_held(%struct.waitq* %14)
  %16 = call i32 @assert(i32 %15)
  %17 = load i32, i32* %9, align 4
  %18 = call i32 @assert_thread_magic(i32 %17)
  %19 = load %struct.waitq*, %struct.waitq** %7, align 8
  %20 = load i32, i32* %8, align 4
  %21 = load i32, i32* %9, align 4
  %22 = call i64 @waitq_select_thread_locked(%struct.waitq* %19, i32 %20, i32 %21, i32* %13)
  store i64 %22, i64* %12, align 8
  %23 = load i64, i64* %12, align 8
  %24 = load i64, i64* @KERN_SUCCESS, align 8
  %25 = icmp eq i64 %23, %24
  br i1 %25, label %26, label %29

26:                                               ; preds = %5
  %27 = load %struct.waitq*, %struct.waitq** %7, align 8
  %28 = call i32 @waitq_stats_count_wakeup(%struct.waitq* %27)
  br label %32

29:                                               ; preds = %5
  %30 = load %struct.waitq*, %struct.waitq** %7, align 8
  %31 = call i32 @waitq_stats_count_fail(%struct.waitq* %30)
  br label %32

32:                                               ; preds = %29, %26
  %33 = load i64, i64* %11, align 8
  %34 = load i64, i64* @WAITQ_UNLOCK, align 8
  %35 = icmp eq i64 %33, %34
  br i1 %35, label %36, label %39

36:                                               ; preds = %32
  %37 = load %struct.waitq*, %struct.waitq** %7, align 8
  %38 = call i32 @waitq_unlock(%struct.waitq* %37)
  br label %39

39:                                               ; preds = %36, %32
  %40 = load i64, i64* %12, align 8
  %41 = load i64, i64* @KERN_SUCCESS, align 8
  %42 = icmp ne i64 %40, %41
  br i1 %42, label %43, label %45

43:                                               ; preds = %39
  %44 = load i64, i64* @KERN_NOT_WAITING, align 8
  store i64 %44, i64* %6, align 8
  br label %59

45:                                               ; preds = %39
  %46 = load i32, i32* %9, align 4
  %47 = load i32, i32* %10, align 4
  %48 = call i64 @thread_go(i32 %46, i32 %47)
  store i64 %48, i64* %12, align 8
  %49 = load i64, i64* %12, align 8
  %50 = load i64, i64* @KERN_SUCCESS, align 8
  %51 = icmp eq i64 %49, %50
  %52 = zext i1 %51 to i32
  %53 = call i32 @assert(i32 %52)
  %54 = load i32, i32* %9, align 4
  %55 = call i32 @thread_unlock(i32 %54)
  %56 = load i32, i32* %13, align 4
  %57 = call i32 @splx(i32 %56)
  %58 = load i64, i64* %12, align 8
  store i64 %58, i64* %6, align 8
  br label %59

59:                                               ; preds = %45, %43
  %60 = load i64, i64* %6, align 8
  ret i64 %60
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @waitq_held(%struct.waitq*) #1

declare dso_local i32 @assert_thread_magic(i32) #1

declare dso_local i64 @waitq_select_thread_locked(%struct.waitq*, i32, i32, i32*) #1

declare dso_local i32 @waitq_stats_count_wakeup(%struct.waitq*) #1

declare dso_local i32 @waitq_stats_count_fail(%struct.waitq*) #1

declare dso_local i32 @waitq_unlock(%struct.waitq*) #1

declare dso_local i64 @thread_go(i32, i32) #1

declare dso_local i32 @thread_unlock(i32) #1

declare dso_local i32 @splx(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
